# mcp-rag-py

./: .gitignore  .pre-commit-config.yaml  Architecture.md  CLAUDE.md  README.md  duckdb_vss_setup_check.py  main.py  pyproject.toml  requirements.txt
.clinerules/: 00_ActiveSprint.md  02_プロジェクトの目的.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.github/: dependabot.yml
.github/workflows/: lint.yaml
data/: sample.txt
data/cloudflare/: workers-llms-full.txt
docs/: README.md
docs/ADR/: 001-RAG実装の技術選定.md  002_モノレポディレクトリ構成.md
docs/要望メモ/: 00_要望調査用のプロンプト.md
docs/要望メモ/DuckDB/: README.md
docs/設計/: 003_mcp_content_endpoint.md
docs/調査/: 001-RAG実装調査.md  002-RAG実装詳細設計.md  004-Python版RAG実装の技術選定.md  005-RAG実装調査レポート：要約と推奨.md  006-RAG実装のタスク分解と工数見積り.md  007-Python_MCP_SDK_調査.md  008-uv調査.md
docs/調査/DuckDB/: setup.md  usage_python.md
docs/調査/LMStudio/: setup.md
docs/調査/Ollama/: setup.md
mcp_adapter/: README.md  __init__.py  client.py  main.py  mcp_spec.py
mcp_server/: README.md  main.py
rag_api_server/: README.md  config.py  core.py  main.py
rag_core/: README.md  __init__.py
rag_core/document_processor/: README.md  __init__.py  loader.py  splitter.py
rag_core/embedding/: README.md  model.py
rag_core/vectordb/: README.md  storage.py
src/mcp_adapter/: README.md  client.py  pyproject.toml
src/mcp_adapter/mcp_adapter/: __init__.py  __main__.py  client.py  config.py  main.py  server.py  server_standalone.py
src/rag_api_server/: README.md  pyproject.toml
src/rag_api_server/rag_api_server/: config.py  core.py  main.py
src/rag_core/: README.md  pyproject.toml
src/rag_core/embedding/: __init__.py
src/rag_core/rag_core/: cli.py  main.py
src/rag_core/rag_core/document_processor/: loader.py  splitter.py
src/rag_core/rag_core/embedding/: model.py
src/rag_core/rag_core/vectordb/: __init__.py  storage.py
