[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_adapter"
version = "0.1.0"
description = "MCP protocol adapter for rag_api_server"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "rag_api_server",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_adapter*"]

[tool.uv.sources]
mcp_adapter = { workspace = true }
