[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_api_server"
version = "0.1.0"
description = "FastAPI server exposing rag_core functionality"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "rag_core",              # workspace 経由でローカル rag_core が解決される
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_api_server*"]

[tool.uv.sources]
rag_api_server = { workspace = true }
