[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_core"
version = "0.1.0"
description = "Core RAG logic"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",         
  "langchain-community>=0.0.30",
  "langchain-ollama>=0.0.23",
  "langchain-text-splitters",
  "sentence-transformers",
  "duckdb",
  "typer[all]",
]

[tool.setuptools]
packages = ["rag_core"]
include-package-data = true

[project.scripts]
rag-core-cli = "rag_core.cli:app"
